@@ -1,5 +1,6 @@
 2015-04-10  Kirit Saelensminde  <kirit@felspar.com>
  Added Django 1.8 to the test set, but the tests are not passing.
+ Added the `atomic` wrapper around the Slumber views where available.
 
 2015-04-09  Kirit Saelensminde  <kirit@felspar.com>
  Add Django 1.7 to the test set.
